--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^8.0.0",
+    "http-status": "^2.0.0",
     "moment": "^2.30.1",
     "mongoose": "^8.9.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "winston": "^3.17.0",
     "xss-clean": "^0.1.4"
   },
