--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "winston": "^3.17.0",
-    "xss-clean": "^0.1.4"
+    "xss-clean": "^0.1.4",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
