--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^8.0.0",
     "http-status": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.9.1",
     "multer": "^1.4.5-lts.1",
